# Ragulation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml  security.yml
data/golden/: qa_v1.jsonl
data/processed/: ai_act_en.jsonl  ai_act_fr.jsonl  ai_act_prohibited_practices.jsonl  ai_act_system_definition.jsonl  edpb_automated_decision_making.jsonl  edpb_consent.jsonl  edpb_data_protection_by_design.jsonl  edpb_dpia.jsonl  edpb_legitimate_interest.jsonl  edpb_right_to_be_forgotten.jsonl  edpb_transparency.jsonl  gdpr_en.jsonl  gdpr_fr.jsonl  gpai_cop_copyright.jsonl  gpai_cop_safety_and_security.jsonl  gpai_cop_transparency.jsonl
data/raw/en/: ai_act_en.html.meta.json  ai_act_prohibited_practices.pdf.meta.json  ai_act_system_definition.pdf.meta.json  edpb_automated_decision_making.pdf.meta.json  edpb_consent.pdf.meta.json  edpb_data_protection_by_design.pdf.meta.json  edpb_dpia.pdf.meta.json  edpb_legitimate_interest.pdf.meta.json  edpb_right_to_be_forgotten.pdf.meta.json  edpb_transparency.pdf.meta.json  gdpr_en.html.meta.json  gpai_cop_copyright.pdf.meta.json  gpai_cop_safety_and_security.pdf.meta.json  gpai_cop_transparency.pdf.meta.json
data/raw/fr/: ai_act_fr.html  ai_act_fr.html.meta.json  gdpr_fr.html  gdpr_fr.html.meta.json
scripts/: build_index.py  calibrate_refusal_threshold.py  fetch_corpus.py  ingest_corpus.py  run_ci_eval_gate.py  run_eval_grid.py
src/rag_flagship/api/: app.py  schemas.py
src/rag_flagship/chunking/: base.py  factory.py  models.py  parent_child.py  recursive.py  semantic.py
src/rag_flagship/corpus/: fetcher.py  manifest.py
src/rag_flagship/embeddings/: dense.py  settings.py
src/rag_flagship/generation/: llm.py  (+3 more)
tests/: conftest.py
(+42 files in other folders)
