[project]
name = "p1-rag-flagship"
version = "0.1.0"
description = "Production-style RAG assistant over EU AI Act and GDPR texts, with a RAGAS evaluation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "docling>=2.112.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "httpx2>=2.5.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "tenacity>=9.1.4",
    "typer>=0.24.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_flagship"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/rag_flagship/api/**" = ["B008"]  # FastAPI's Depends() is meant to be a default argument

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live external service (Ollama, Qdrant, or network access)",
]
addopts = "-ra -m \"not integration\""

[tool.coverage.run]
source = ["src/rag_flagship"]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "mypy>=2.2.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]
